; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lconnect.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"Invalid port\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lconnect(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.skynet_context*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 0, i64* %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i8* @luaL_checklstring(i32* %13, i32 1, i64* %4)
  store i8* %14, i8** %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %6, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %7, align 8
  store i32 0, i32* %8, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i8* @address_port(i32* %18, i8* %17, i8* %19, i32 2, i32* %8)
  store i8* %20, i8** %9, align 8
  %21 = load i32, i32* %8, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %1
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @luaL_error(i32* %24, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32 %25, i32* %2, align 4
  store i32 1, i32* %10, align 4
  br label %37

26:                                               ; preds = %1
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @lua_upvalueindex(i32 1)
  %29 = call %struct.skynet_context* @lua_touserdata(i32* %27, i32 %28)
  store %struct.skynet_context* %29, %struct.skynet_context** %11, align 8
  %30 = load %struct.skynet_context*, %struct.skynet_context** %11, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @skynet_socket_connect(%struct.skynet_context* %30, i8* %31, i32 %32)
  store i32 %33, i32* %12, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = load i32, i32* %12, align 4
  %36 = call i32 @lua_pushinteger(i32* %34, i32 %35)
  store i32 1, i32* %2, align 4
  store i32 1, i32* %10, align 4
  br label %37

37:                                               ; preds = %26, %23
  %38 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %38)
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i8* @address_port(i32*, i8*, i8*, i32, i32*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local %struct.skynet_context* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_upvalueindex(i32) #1

declare dso_local i32 @skynet_socket_connect(%struct.skynet_context*, i8*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
